--- a/index.html
+++ b/index.html
@@ -18,29 +18,31 @@
   </div>
 
   <div class="world-bar">
-    <div class="world-item"><label>Grid (W×H)</label><span class="value" id="gridSize">150×100</span></div>
-    <div class="world-item"><label>Pixel scale</label><span class="value" id="pxScale">4</span></div>
-    <div class="world-item"><label>Initial bacteria</label><input id="initB" type="number" step="1" value="150"></div>
-    <div class="world-item"><label>Random seed</label><input id="rngSeed" type="text" value="42"></div>
-    <div class="small">Re-run Reset after changing seed or counts.</div>
+    <div class="world-left">
+      <div class="world-item"><label class="clickable" id="btnGrid">Grid (W×H)</label><span class="value" id="gridSize">150×100</span></div>
+      <div class="world-item"><label>Pixel scale</label><span class="value" id="pxScale">4</span></div>
+      <div class="world-item"><label>Initial bacteria</label><input id="initB" type="number" step="1" value="150"></div>
+      <div class="world-item"><label>Random seed</label><input id="rngSeed" type="text" value="42"></div>
+      <div class="world-item">
+        <div class="btns">
+          <button id="btnToggle" class="primary">▶️ Start</button>
+          <button id="btnStep">Step</button>
+          <button id="btnReset" class="warn">Reset</button>
+          <button id="btnSeedB" title="Add bacteria">+ Bacteria</button>
+          <button id="btnSeedF" title="Re-seed food field">Re-seed Food</button>
+          <label style="margin-left:8px; display:inline-block; min-width:40px">Speed</label>
+          <input id="speed" type="range" min="1" max="50" step="1" value="8" />
+        </div>
+      </div>
+    </div>
+    <div class="world-spacer"></div>
+    <div class="world-right">
+      <button id="btnThemes">Themes</button>
+    </div>
+    <div class="small" style="width:100%">Re-run Reset after changing seed or counts.</div>
   </div>
 
   <div class="panel">
-    <div class="section">
-      <h3>Run controls</h3>
-      <div class="btns">
-        <button id="btnToggle" class="primary">▶️ Start</button>
-        <button id="btnStep">Step</button>
-        <button id="btnReset" class="warn">Reset</button>
-        <button id="btnSeedB" title="Add bacteria">+ Bacteria</button>
-        <button id="btnSeedF" title="Re-seed food field">Re-seed Food</button>
-      </div>
-      <div class="row" style="margin-top:10px">
-        <label>Speed (ticks / frame)</label>
-        <input id="speed" type="range" min="1" max="50" step="1" value="8" />
-      </div>
-      <div class="small">Tip: Start slow, then increase speed once it's stable.</div>
-    </div>
 
     <div class="section">
       <h3>Biology params</h3>
