--- a/index.html
+++ b/index.html
@@ -40,9 +40,24 @@
     <div class="world-right">
       <button id="btnParams">Biology &amp; Food</button>
       <button id="btnThemes">Themes</button>
+      <span class="small" style="margin-left:10px">Mode:</span>
+      <button id="btnModePreset" class="primary">Preset</button>
+      <button id="btnModeDraw">Draw</button>
+      <div class="draw-tools" id="drawTools" style="display:none; margin-left:10px">
+        <div class="draw-item"><label>Brush</label>
+          <select id="brushType">
+            <option value="food">Food</option>
+            <option value="obstacle">Obstacle</option>
+            <option value="bacteria">Bacteria</option>
+          </select>
+        </div>
+        <div class="draw-item"><label>Size</label><input id="brushSize" type="range" min="1" max="20" step="1" value="5"></div>
+        <div class="draw-item"><label>Strength</label><input id="brushStrength" type="range" min="0.1" max="1.0" step="0.1" value="0.6"></div>
+      </div>
     </div>
     <div class="small" style="width:100%">Re-run Reset after changing seed or counts.</div>
   </div>
+  
 
   <div class="panel">
 
