--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <canvas id="view" width="600" height="400" aria-label="Simulation view"></canvas>
     <canvas id="overlay" width="600" height="400" aria-label="Bacteria overlay"></canvas>
     <div class="hud" id="hud" style="display:none"></div>
+    <div class="mini-charts" id="miniCharts">
+      <canvas id="chartCountOverlay" aria-label="Bacteria over time"></canvas>
+      <canvas id="chartFoodOverlay" aria-label="Avg food over time"></canvas>
+    </div>
   </div>
 
   <div class="world-bar">
@@ -31,7 +35,7 @@
           <button id="btnSeedB" title="Add bacteria">+ Bacteria</button>
           <button id="btnSeedF" title="Re-seed food field">Re-seed Food</button>
           <span class="speed-wrap"><label style="display:inline-block; min-width:40px">Speed</label>
-          <input id="speed" type="range" min="1" max="50" step="1" value="8" /></span>
+          <input id="speed" type="range" min="1" max="3" step="1" value="1" /></span>
         </div>
       </div>
     </div>
@@ -39,6 +43,7 @@
     <div class="world-right">
       <button id="tabBio" class="primary">Bio</button>
       <button id="tabVisuals">Visuals</button>
+      <button id="tabEco">Ecosystem builder</button>
       <button id="tabDraw">Save &amp; Presets</button>
     </div>
   </div>
@@ -76,6 +81,7 @@
   <div class="panel" id="visualsPanel" style="display:none">
     <div class="section">
       <h3>Themes</h3>
+      <div class="row"><label>Food empty</label><input type="color" id="thFoodEmpty" value="#070a12"></div>
       <div class="row"><label>Food low</label><input type="color" id="thFoodLow" value="#081e3c"></div>
       <div class="row"><label>Food high</label><input type="color" id="thFoodHigh" value="#6ec3ff"></div>
       <div class="row"><label>Bacteria</label><input type="color" id="thBacteria" value="#aaffbe"></div>
@@ -96,6 +102,9 @@
       <div class="row"><label>Export</label><button id="btnExportPresets">Download JSON</button></div>
       <div class="row"><label>Import</label><input id="fileImportPresets" type="file" accept="application/json"></div>
     </div>
+  </div>
+
+  <div class="panel" id="ecoPanel" style="display:none">
     <div class="section">
       <h3>Ecosystem builder</h3>
       <div class="row"><label>Clear all</label><button id="btnClearAll" class="warn">Clear all</button><span class="small">Removes food, bacteria and obstacles.</span></div>
@@ -113,34 +122,7 @@
     </div>
   </div>
 
-  <div class="insights">
-    <div class="section">
-      <h3>Data Insights</h3>
-      <div class="cards">
-        <div class="card"><div class="card-title">Ticks</div><div class="card-value" id="statTicks">0</div></div>
-        <div class="card"><div class="card-title">Bacteria</div><div class="card-value" id="statCount">0</div></div>
-        <div class="card"><div class="card-title">Avg Energy</div><div class="card-value" id="statAvgE">0.00</div></div>
-        <div class="card"><div class="card-title">Avg Food</div><div class="card-value" id="statAvgF">0.000</div></div>
-        <div class="card"><div class="card-title">Births</div><div class="card-value" id="statBirths">0</div></div>
-        <div class="card"><div class="card-title">Deaths</div><div class="card-value" id="statDeaths">0</div></div>
-      </div>
-    </div>
-    <div class="section">
-      <h3>Trends</h3>
-      <div class="charts">
-        <div class="chart">
-          <div class="chart-title">Population over time</div>
-          <div class="chart-desc">Total bacteria count tracked per frame.</div>
-          <canvas id="chartCount" width="600" height="120" aria-label="Bacteria over time"></canvas>
-        </div>
-        <div class="chart">
-          <div class="chart-title">Average food over time</div>
-          <div class="chart-desc">Mean food concentration across the grid.</div>
-          <canvas id="chartFood" width="600" height="120" aria-label="Avg food over time"></canvas>
-        </div>
-      </div>
-    </div>
-  </div>
+  
 
   <!-- Info Modal -->
   <div class="modal-backdrop" id="paramModal">
