--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Bacterial Energy Automaton — minimal & extensible</title>
+  <title>BIOSIM v.0.5</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
-    <h1>🧫 BIO v0.5</h1>
+    <h1>🧫 BIOSIM v0.5</h1>
   </header>
 
   <div class="board-wrap">
